Fix: aligned book cover img on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,13 +148,6 @@ body {
     text-align: center;
 }
 
-.book-cover {
-    height: 280px;
-    width: 180px;
-    margin-right: 40px;
-
-}
-
 
 .btn-purchase {
     font-size: 20px;
